# svalin

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  justfile  readme.md
flutter_bridge/: Cargo.toml
flutter_bridge/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
flutter_bridge/src/api/: client.rs  mod.rs  simple.rs  totp.rs
frostbyte_term/: Cargo.toml  Readme.md
frostbyte_term/src/: main.rs  threaded_writer.rs  ui.rs
frostbyte_term/src/ui/: local_terminal.rs  mod.rs
frozen_term/: Cargo.toml  Readme.md
frozen_term/src/: lib.rs  terminal.rs
gui_flutter/rust/: Cargo.toml
gui_flutter/rust/src/: frb_generated.rs
marmelade/: Cargo.toml
marmelade/src/: bucket.rs  db.rs  lib.rs  postcard.rs  scope.rs  transaction_type.rs
sqlx_storage/: Cargo.toml
sqlx_storage/src/: lib.rs  migrator.rs  storage_provider.rs
sqlx_storage/tests/: lifecycle.rs
store_client/: .env  Cargo.toml
store_client/.sqlx/: query-0c60b9d5eba7dad3398a0c7d4d7af3c9abb956917960032d54b01c3652767f94.json  query-56bb9e3ba8d6403eec3a2346cc9e1798b1560f3644cfd04e42505f3a193b7def.json  query-a8540ffbcb9df2f840e92cba4ce46dd0af623555d869c59155dd0b6a5f9dffbe.json  query-bec13cb5ee13a5f211145cf1d9c6a5fc9d7f6fbd12459f197317b697ed744cbf.json  query-cbff51b4a46eedb54b5024d456598126e6a51311b0c924de3833480cf261baf3.json  query-d90a196d1615b19cf2a2fb675998740e47cf5bf0a0e4614bacd24760724d5188.json
store_client/migrations/: 20260401214959_system_reports.sql  20260518234400_meta_info.sql
store_client/src/: lib.rs  persistent.rs
store_server/: .env  Cargo.toml
store_server/.sqlx/: query-0acd6ae13c4153aeb89756845f6020c3ceb34e7acdfadc2f1dcb41202f682787.json  query-0add1c01853a30de28c120452abfc42442f90338eb7313d28c917376ffb9a278.json  query-0fd5106ca021f8975c6b05d25fe458ce367d4926841cd7858774c6a59efa6f62.json  query-3c74ae646a86ef4813c1e278cb5e655e15b8d07c6b575c638b46a335939464c6.json  query-550da691eb26ec553428d74ea6aff58f074eef18b6f93f323d4038ebd828bad1.json  query-6824b8187d0d5c14132bbb3ae5f50bc71766d596cd79ea2f81dfd15832d6c71d.json  query-692438fa4a50038dbc580c4d46ec722e4f7c5805ceb017d983f050a0aecca0a3.json  query-6d188b091f4f08864e2af2b7560172719ce4a6a939f45a3a4c85e0627a188733.json  query-8e63fcb1d0eb6c86892d9f4e31b376da870344c511fcc2c7ad8ea90e7f4ab844.json  query-93e14dc01addf95690e7e3923b94554ea2e59109d49e91ade1fd45f4f475a0c6.json  query-96ccac8a8747f20426005e18a4151b9ef1f23f60c999cfdf6a8ac60eeb10502a.json  query-980fb5a4c55ee4890c1992dfd05e2514d5f513ba76a67e54c067f57f5e7c20d2.json  query-98ab15905520042a87c6638c35f2f890d1bf0084e7502fb254a54b2c6abe43b5.json  query-a60431770766532ec803879a21b13ad19fa0e809f83af8572d2c360e06eb8209.json  query-bae754c2c90cfa9f04f5149c702aad0da7e6ffa433568aaa46751f2bb6bfe7be.json  query-c2a36a217c5a35b7aa25d13cb1c29c18cfdeddfb57e4c29ab070f2331a604fbd.json  query-c494affb1338ec0926c49ca5424da2b9ee9c4b05c579e7e2acdb2e8e616bdcb0.json  query-cad19bc851b2ab32952310d7ed3ad95143a4b805dda7c4f6c2e60bc19194d91c.json  query-dc22ffac676784523f06bb0c9195e95f9512ec87f6c9013303d090cdd07f27df.json  query-e8ca16dfbcb9b8f30fb45b720a84050483d1f98a70c44fdaf6d4d2d38cfa7761.json  query-f8787d222f5ea003d173526bc1cedeca407208d3794329e812d59d30e15bf6e1.json  query-fb3b520837291c9f51730fc6af97818ea3970d33e824b3407a56427f5ce7811c.json
store_server/migrations/: 20251202195732_key_packages.sql
store_server/src/: agent_store.rs  key_package_store.rs  lib.rs  message_store.rs  session_store.rs  user_store.rs
svalin/: Cargo.toml  build.rs  server_test.jammdb
svalin/.sqlx/: query-05e644f8a96f05d4e4a9e099a771a5fae88f8aacbbb26e353b5ba3050bcf0b2d.json  query-2ce130929c6b13e62e99d77bd5d1de4702dde9e3cca20249df1c81b5876f4329.json  query-2e740bac9a20c4ec133df259aa3b21806569cfa0952f6de858fa4a6f66c3ed28.json  query-89017f865758d71a858b53a80f8d428064b4ae24ba8e0f8b0657d909018826e1.json  query-94270a9a48d9eebdfe1ac58cd5c6c011bbd0a5151637dd89797b98c3d03fbcb4.json
svalin/migrations/server/: 20250413131517_user_table.sql  20250413140556_agent_table.sql  20250903230512_session_table.sql  20251202195732_key_package_table.sql  20260310234800_mls_messages.sql
svalin/packaging/systemd/: svalin-agent.service  svalin-server.service
svalin/packaging/windows/: install.ps1
svalin/src/: agent.rs  async_com.rs  client.rs  device.rs  init.rs  installer.rs  lib.rs  main.rs  message_streaming.rs  mls.rs  permissions.rs  remote_key_retriever.rs  server.rs  test.rs  util.rs  verifier.rs
svalin/src/agent/: init.rs  mls.rs  mod.rs  update.rs
svalin/src/async_com/: agent.rs  client.rs  server.rs
svalin/src/client/: add_agent.rs  device.rs  first_connect.rs  mod.rs  profile.rs  state.rs  tunnel_manager.rs
svalin/src/installer/: agent.rs
svalin/src/message_streaming/: agent.rs  client.rs  server.rs  with_agent.rs  with_client.rs
svalin/src/permissions/: agent_permission_handler.rs  default_permission_handler.rs  mod.rs  server_permission_handler.rs
svalin/src/server/: agent_store.rs  chain_loader.rs  command_builder.rs  config_builder.rs  key_package_store.rs  local_key_retriever.rs  message_store.rs  mod.rs  session_store.rs  user_store.rs  users.rs
svalin/src/shared/: commands.rs  (+3 more)
svalin_iced/: .env  Cargo.toml  build.rs
svalin_iced/fonts/: icons.toml
svalin_iced/locales/: de.yaml  en.yaml
svalin_iced/src/: main.rs  ui.rs
svalin_pki/: Cargo.toml
svalin_pki/src/: argon.rs  certificate.rs  certificate_chain.rs  certificate_request.rs  credential.rs  encrypt.rs  error.rs  hash.rs  hybrid_encrypted_object.rs  keypair.rs  lib.rs  mls.rs  perm_credentials.rs  public_key.rs  sealed_object.rs  serde_paramsstring.rs  serde_saltstring.rs  signed_message.rs  signed_object.rs  temp_credentials.rs  test.rs
svalin_rpc/: Cargo.toml
svalin_rpc/src/: client.rs  command.rs  connection.rs  defaults.rs  lib.rs  object_stream.rs  ping.rs  server.rs  session.rs  skip_verify.rs  test.rs  transport.rs
svalin_sysctl/: Cargo.toml
svalin_sysctl/src/: lib.rs  pty.rs  realtime.rs  sytem_report.rs
traefik-gui/: Cargo.toml  Dioxus.toml
traefik-gui/src/: main.rs
(+294 files in other folders)
