[workspace]

resolver = "2"

members = [
    "svalin",
    "svalin_macros",
    "svalin_pki",
    "svalin_rpc",
    "svalin_sysctl",
    # "svalin_iced",
    "sqlx_storage"
]

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
rand = "0.10.0"
serde = "1.0.228"
serde_json = { version = "1.0.149", features = ["alloc"] }
sipper = "0.1.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full", "test-util"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
time = "0.3.47"

[patch.crates-io]
# temporarily needed for rust 1.91 compatibility
sha3 = { git = "https://github.com/RustCrypto/hashes.git" }
