[workspace]

resolver = "2"

members = [
    "svalin",
    "svalin_pki",
    "svalin_rpc",
    "svalin_sysctl",
    # "svalin_iced",
    "sqlx_storage",
    "store_server",
    "store_client"
]

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.10.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["alloc"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full", "test-util"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
time = "0.3.47"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
argon2 = "0.5.3"
async_pty = { git = "https://github.com/Rahn-IT/frostbyte_terminal.git" }
aucpace = "0.1.1"
clap = "4.6.0"
curve25519-dalek = "4.1.3"
dashmap = "6.1.0"
futures = "0.3.32"
futures-core = "0.3.32"
openmls = "0.8.1"
openmls_rust_crypto = "0.5.1"
openmls_sqlx_storage = { path = "sqlx_storage" }
openmls_traits = "0.5.0"
pin-project = "1.1.11"
portable-pty = "0.9.0"
proc-macro2 = "1.0.106"
quinn = "0.11.9"
quote = "1.0.45"
rcgen = "0.14.7"
reqwest = { version = "0.13.2", default-features = false }
ring = "0.17.14"
rustls = { version = "0.23.37", default-features = false }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "uuid"] }
svalin_macros = { path = "svalin_macros" }
svalin_pki = { path = "svalin_pki" }
svalin_rpc = { path = "svalin_rpc" }
svalin_sysctl = { path = "svalin_sysctl" }
syn = "2.0.117"
sysinfo = "0.38.4"
test-log = "0.2.19"
tls_codec = "0.4.2"
tokio-rustls = { version = "0.26.4", default-features = false }
totp-rs = "5.7.1"
tracing-subscriber = "0.3.23"
x509-parser = "0.18.1"
zeroize = "1.8.2"
svalin_server_store = { path = "store_server" }
svalin_client_store = { path = "store_client" }

[patch.crates-io]
# temporarily needed for rust 1.91 compatibility
sha3 = { git = "https://github.com/RustCrypto/hashes.git" }
