[workspace]

resolver = "2"

members = [
    "svalin",
    "svalin_pki",
    "svalin_rpc",
    "svalin_sysctl",
    "svalin_iced",
    "sqlx_storage",
    "store_server",
    "store_client"
]

[workspace.dependencies]
anyhow = "1.0.104"
async-trait = "0.1.91"
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.10.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = { version = "1.0.151", features = ["alloc"] }
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["full", "test-util"] }
tokio-util = { version = "0.7.19", features = ["rt"] }
tracing = "0.1.44"
time = "0.3.54"
uuid = { version = "1.24.0", features = ["v4", "serde"] }
argon2 = "0.5.3"
async_pty = { git = "https://github.com/Rahn-IT/frostbyte_terminal.git" }
aucpace = "0.1.1"
clap = "4.6.4"
curve25519-dalek = "5.0.0"
dashmap = "6.2.1"
futures = "0.3.33"
futures-core = "0.3.33"
openmls = "0.8.1"
openmls_rust_crypto = "0.5.1"
openmls_sqlx_storage = { path = "sqlx_storage" }
openmls_traits = "0.5.0"
pin-project = "1.1.13"
portable-pty = "0.9.0"
proc-macro2 = "1.0.107"
quinn = "0.11.11"
quote = "1.0.47"
rcgen = "0.14.8"
reqwest = { version = "0.13.4", default-features = false }
ring = "0.17.14"
rustls = { version = "0.23.42", default-features = false }
sha2 = "^0.11.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "uuid"] }
svalin_pki = { path = "svalin_pki" }
svalin_rpc = { path = "svalin_rpc" }
svalin_sysctl = { path = "svalin_sysctl" }
syn = "3.0.3"
sysinfo = "0.39.6"
test-log = "0.2.21"
tls_codec = "0.5.0"
tokio-rustls = { version = "0.26.4", default-features = false }
totp-rs = "5.7.2"
tracing-subscriber = "0.3.23"
x509-parser = "0.18.1"
zeroize = "1.9.0"
svalin_server_store = { path = "store_server" }
svalin_client_store = { path = "store_client" }

[patch.crates-io]
# temporarily needed for rust 1.91 compatibility
# sha3 = { git = "https://github.com/RustCrypto/hashes.git" }
iced = { git = "https://github.com/iced-rs/iced.git" }
iced_core = { git = "https://github.com/iced-rs/iced.git" }
iced_widget = { git = "https://github.com/iced-rs/iced.git" }



[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
