[package]
name = "rust_lib_gui_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.32"
tokio = { version = "1.37.0", features = ["time"] }
svalin = { path = "../svalin" }
anyhow = "1.0.83"
totp-rs = { version = "5.5.1", features = ["qr", "serde_support"] }
tracing-subscriber = "0.3.18"
