[package]
name = "marmelade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
jammdb = "0.11.0"
postcard = { version = "1.0.10", optional = true }
serde = { version = "1.0.215", optional = true }

[features]
default = []
postcard = ["dep:postcard", "dep:serde"]
