[package]
name = "marmelade"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
jammdb = "0.11.0"
postcard = { version = "1.1.1", optional = true }
serde = { version = "1.0.218", optional = true }

[features]
default = []
postcard = ["dep:postcard", "dep:serde"]
