[package]
name = "openmls_sqlx_storage"
authors = ["OpenMLS Authors", "acul009"]
version = "0.1.0"
edition = "2024"
description = "A storage provider for OpenMLS using SQLx. Modified by acul009"
license = "MIT"
documentation = "https://docs.rs/openmls_sqlx_storage"
repository = "https://github.com/openmls/openmls/tree/main/sqlx_storage"
readme = "README.md"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["sqlite", "migrate", "runtime-tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures-core = { workspace = true }
openmls_traits = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
extensions-draft-08 = ["openmls_traits/extensions-draft-08"]
