[package]
name = "svalin"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE"
authors = ["Luca Wlcek <luca@it-rahn.de>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
async-trait = "0.1.86"
clap = { version = "4.5.31", features = ["derive"] }
serde = "1.0.218"
svalin_pki = { path = "../svalin_pki" }
svalin_rpc = { path = "../svalin_rpc" }
svalin_sysctl = { path = "../svalin_sysctl" }
svalin_macros = { path = "../svalin_macros" }
marmelade = { path = "../marmelade", features = ["postcard"] }
tokio = { version = "1.43.0", features = ["full", "test-util"] }
rand = "0.9.0"
totp-rs = { version = "5.6.0", features = [
    "qr",
    "serde_support",
    "gen_secret",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
test-log = { version = "0.2.17", features = ["trace"] }
futures = "0.3.31"
pin-project = "1.1.9"
thiserror = "2.0.11"
uuid = { version = "1.15.1", features = ["v4"] }
tokio-util = "0.7.13"
aucpace = { version = "0.1.1", features = ["alloc", "serde", "strong_aucpace"] }
password-hash = "0.5.0"
curve25519-dalek = { version = "4.1.3", features = [
    "serde",
    "digest",
    "rand_core",
] }

[package.metadata.deb]
depends = "libc6 (>= 2.31)"
systemd-units = [
    { unit-name = "svalin-server", enable = false, start = false, unit-scripts = "packaging/systemd" },
    { unit-name = "svalin-agent", enable = false, start = false, unit-scripts = "packaging/systemd" },
]
maintainer-scripts = "packaging/deb/maintainer-scripts"
