[package]
name = "svalin"
version = "0.1.3-alpha"
edition = "2024"
license-file = "../LICENSE"
authors = ["Luca Wlcek <luca@it-rahn.de>"]
description = "Headless package of the svalin rmm system"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
time.workspace = true

async_pty = { git = "https://github.com/Rahn-IT/frostbyte_terminal.git" }
clap = { version = "4.5.53", features = ["derive", "unstable-doc"] }
svalin_rpc = { path = "../svalin_rpc" }
svalin_sysctl = { path = "../svalin_sysctl" }
svalin_macros = { path = "../svalin_macros" }
svalin_pki = { path = "../svalin_pki" }
totp-rs = { version = "5.7.0", features = [
    "qr",
    "serde_support",
    "gen_secret",
    "zeroize"
] }
tracing-subscriber = "0.3.22"
test-log = { version = "0.2.19", features = ["trace"] }
futures = "0.3.31"
pin-project = "1.1.10"
uuid = { version = "1.19.0", features = ["v4"] }
aucpace = { version = "0.1.1", features = ["alloc", "serde", "strong_aucpace"] }
reqwest = { version = "0.13.1", features = [
    "json",
    "rustls",
    "stream",
], default-features = false }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
zeroize = { version = "1.8.2", features = ["derive"] }
dashmap = "6.1.0"
openmls_sqlx_storage = { path = "../sqlx_storage" }

[package.metadata.deb]
depends = "libc6 (>= 2.31)"
systemd-units = [
    { unit-name = "svalin-server", enable = false, start = false, unit-scripts = "packaging/systemd" },
    { unit-name = "svalin-agent", enable = false, start = false, unit-scripts = "packaging/systemd" },
]
maintainer-scripts = "packaging/deb/maintainer-scripts"
