[package]
name = "svalin_iced"
version = "0.1.0"
edition = "2024"

[dependencies]

svalin = { path = "../svalin" }
svalin_pki = { path = "../svalin_pki" }
svalin_rpc = { path = "../svalin_rpc" }
svalin_sysctl = { path = "../svalin_sysctl" }
svalin_macros = { path = "../svalin_macros" }

frozen_term = { git = "https://github.com/Rahn-IT/frostbyte_terminal.git"}
async_pty = { git = "https://github.com/Rahn-IT/frostbyte_terminal.git" }

iced = { git = "https://github.com/iced-rs/iced.git", features = [
    "canvas",
    "wgpu",
    "tokio",
    "advanced",
    "image",
] }
anyhow = "1.0.100"
futures-util = "0.3.31"
tokio = { workspace = true }
totp-rs = { version = "5.7.0", features = ["qr", "gen_secret"] }
lyon_algorithms = "1.0.16"
thiserror = { workspace = true }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { workspace = true }
futures = "0.3.31"
uuid = "1.18.1"
rust-i18n = "3.1.5"
sipper = { workspace = true }

[build-dependencies]
iced_fontello = "0.13"
