[package]
name = "svalin_iced"
version = "0.1.0"
edition = "2024"

[dependencies]

svalin = { path = "../svalin" }
svalin_client_store = { path = "../store_client" }
svalin_pki = { path = "../svalin_pki" }
svalin_rpc = { path = "../svalin_rpc" }
svalin_sysctl = { path = "../svalin_sysctl" }

# frozen_term = { git = "https://github.com/Rahn-IT/frostbyte_terminal.git"}
# async_pty = { git = "https://github.com/Rahn-IT/frostbyte_terminal.git" }

iced = { git = "https://github.com/iced-rs/iced.git", features = [
    "canvas",
    "wgpu",
    "tokio",
    "advanced",
    "image",
    "sipper"
] }
iced_core = { git = "https://github.com/iced-rs/iced.git" }
# iced = { version = "^0.14.0", features = [
#     "canvas",
#     "wgpu",
#     "tokio",
#     "advanced",
#     "image",
#     "sipper"
# ] }
anyhow = "1.0.104"
futures-util = "0.3.33"
tokio.workspace = true
totp-rs = { version = "5.7.2", features = ["qr", "gen_secret"] }
lyon_algorithms = "1.0.20"
thiserror.workspace = true
tokio-stream = { version = "0.1.19", features = ["full"] }
tokio-util.workspace = true
futures = "0.3.33"
uuid = "1.24.0"
rust-i18n = "4.2.1"
tracing.workspace = true
iced_fonts = { git = "https://github.com/Redhawk18/iced_fonts.git", branch = "master" }
chrono = "0.4.45"

[build-dependencies]
iced_fontello = {git = "https://github.com/hecrj/iced_fontello.git"}
