[package]
name = "svalin_pki"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["simple", "std"] }
postcard = { workspace = true }
rand = { workspace = true }
rcgen = { version = "0.14.6", features = ["x509-parser", "zeroize"] }
ring = "0.17.14"
rustls = { version = "0.23.35", default-features = false, features = ["std"] }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
x509-parser = { version = "0.18.0", features = ["ring", "validate", "verify"] }
zeroize = { version = "1.8.2", features = ["aarch64", "derive", "std"] }
openmls = { version = "0.7.1", features = ["openmls_rust_crypto"] }
openmls_traits = "0.4.1"
tls_codec = { version = "0.4.2" }
sha2 = "0.10.9"
openmls_rust_crypto = "0.4.1"
openmls_sqlx_storage = { path = "../sqlx_storage" }
curve25519-dalek = { version = "4.1.3", features = [
    "serde",
    "digest",
    "rand_core",
] }
password-hash = "0.5.0"

[dev-dependencies]
sqlx = { version = "0.8.6", features = ["sqlite", "migrate", "runtime-tokio"] }
