[package]
name = "svalin_sysctl"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
anyhow = "1.0.100"
portable-pty = "0.9.0"
sysinfo = { version = "0.37.2", features = ["windows", "serde"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing.workspace = true
