[package]
name = "svalin_sysctl"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
anyhow = "1.0.102"
portable-pty = "0.9.0"
sysinfo = { version = "0.38.4", features = ["windows", "serde"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing.workspace = true
