[package]
name = "traefik-gui"
version = "0.1.0"
authors = ["L. Wlcek <luca@it-rahn.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

marmelade = { path = "../marmelade", optional = true }

# Debug
log = "0.4.21"
dioxus-logger = "0.4.1"
once_cell = "1.19.0"

[features]
default = []
server = ["dioxus/axum", "marmelade"]
web = ["dioxus/web"]
